# snputils_rpca

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci-cd.yml  docs.yml  tests.yml
benchmark/: README.md  conftest.py  plot.py  read_bed.py  read_pgen.py  read_vcf.py  run.sh  utils.py
demos/: LAI_visualization.ipynb  PhenObj.ipynb  SNPObj.ipynb  SNP_PCA.ipynb  TorchPCA.ipynb  admixture_mapping.ipynb  mdPCA_maasMDS.ipynb  srpcp.ipynb
snputils/: __init__.py
snputils/ancestry/: __init__.py
snputils/ancestry/genobj/: __init__.py  base.py  local.py  snp.py  wide.py  window.py
snputils/ancestry/io/: __init__.py
snputils/ancestry/io/local/: __init__.py  others.py
snputils/ancestry/io/local/read/: __init__.py  auto.py  base.py  functional.py  msp.py
snputils/ancestry/io/local/write/: __init__.py  adm_mapping_vcf.py  base.py  msp.py
snputils/ancestry/io/wide/: __init__.py
snputils/ancestry/io/wide/read/: __init__.py  admixture.py  base.py  functional.py
snputils/ancestry/io/wide/write/: __init__.py  admixture.py  base.py
snputils/phenotype/: __init__.py
snputils/phenotype/genobj/: __init__.py  multi_phenobj.py  ukb_phenobj.py
snputils/phenotype/io/: __init__.py
snputils/phenotype/io/read/: __init__.py  base.py  multiPhenTabular.py  ukbPhenReader.py
snputils/processing/: __init__.py  maasmds.py  mdpca.py  pca.py  rpca.py
snputils/processing/_utils/: common.py  gen_tools.py  iterative_svd.py  mds_distance.py  solver.py  srpca.py
snputils/simulation/: __init__.py
snputils/snp/: __init__.py
snputils/snp/genobj/: __init__.py  snpobj.py
snputils/snp/io/: __init__.py
snputils/snp/io/read/: __init__.py  auto.py  base.py  bed.py  functional.py  pgen.py  vcf.py
snputils/snp/io/read/__test__/: conftest.py  test_auto.py  test_fields.py  test_formats.py  test_phased.py  test_summed_strands.py
snputils/snp/io/write/: __init__.py  bed.py  pgen.py  vcf.py
snputils/tools/: admixture_mapping.py  dummy_tool.py  main.py  pca.py
snputils/visualization/: __init__.py  admixture_manhattan_plot.py  admixture_viz.py  lai.py  scatter_plot.py
